# rebuild-initramfs-dracut-arch

./: .gitignore  LICENSE  README.md  man.md  pyproject.toml  rebuild-initramfs.py  rebuild-initramfs.yaml
hooks/: 60-rebuild-initramfs-remove.hook
hooks/scripts/: rebuild-initramfs-install
src/: rebuild_initramfs.py
